apps/tets/base/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tets
  labels:
    kubernetes.io/metadata.name: tets
    backstage.io/kubernetes-id: tets
    istio-injection: enabled
spec:
  finalizers:
  - kubernetes
