apps/tets/base/tets-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tets-svc
  namespace: tets
  annotations:
    external-dns.alpha.kubernetes.io/hostname: tets.katakam.eti.br
  labels:
    app: tets
    version: 0.0.1
    backstage.io/kubernetes-id: tets
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: tets
