apps/tets/base/tets-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tets-vs
  namespace: tets
  labels:
    app: tets
    version: 0.0.1
    backstage.io/kubernetes-id: tets
spec:
  gateways:
  - istio-system/istio-ingressgateway
  hosts:
  - tets.katakam.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: tets-svc
      weight: 100
